force-app/main/default/objects/Staff__c/Staff__c.object-meta.xml
<CustomObject>
    <label>Staff</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>