force-app/main/default/objects/Staff__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <label>Locations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>