force-app/main/default/objects/Staff__c/fields/Positions__c.field-meta.xml
<CustomField>
    <fullName>Positions__c</fullName>
    <label>Positions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 Rosemont Ave Woollahra</fullName>
            </value>
            <value>
                <fullName>Bar Back</fullName>
            </value>
            <value>
                <fullName>Bar Supervisor</fullName>
            </value>
            <value>
                <fullName>Barista</fullName>
            </value>
            <value>
                <fullName>Bartender - Bump In Support</fullName>
            </value>
            <value>
                <fullName>Bathroom attendant</fullName>
            </value>
            <value>
                <fullName>Boardroom waiter</fullName>
            </value>
            <value>
                <fullName>booked ext</fullName>
            </value>
            <value>
                <fullName>Breakfast FW</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Cnr Bridge Street &amp;, Phillip St, Sydney NSW 2000, Australia</fullName>
            </value>
            <value>
                <fullName>COFFEE CART AT EVENT</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Corporate Area BB</fullName>
            </value>
            <value>
                <fullName>Corporate Area FW</fullName>
            </value>
            <value>
                <fullName>Corporate Area SB</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
            <value>
                <fullName>Event Waiter</fullName>
            </value>
            <value>
                <fullName>Function Waiter</fullName>
            </value>
            <value>
                <fullName>Head Waiter</fullName>
            </value>
            <value>
                <fullName>Heat &amp; Serve</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Junior bar</fullName>
            </value>
            <value>
                <fullName>Junior waiter</fullName>
            </value>
            <value>
                <fullName>KitchenHand</fullName>
            </value>
            <value>
                <fullName>Level 2 Training</fullName>
            </value>
            <value>
                <fullName>Maitre D&apos;</fullName>
            </value>
            <value>
                <fullName>Mixologist</fullName>
            </value>
            <value>
                <fullName>Nanny</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>