force-app/main/default/objects/Staff__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(GMT+11:00) Australian Eastern Standard Time - Sydney</fullName>
            </value>
            <value>
                <fullName>(GMT+10:00) Australian Eastern Standard Time - Melbourne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>